2008-07-28  Chong Yidong  <cyd@stupidchicken.com>

	* xdisp.c (redisplay_window): Check return value of
	compute_window_start_on_continuation_line before forcing a window
	start.

2008-07-28  Jason Rumney  <jasonr@gnu.org>

        * w32term.c: (w32_enable_unicode_output, cleartype_active): Remove
        obsolete display options.
        (x_draw_glyph_string_background): Don't use old cleartype_active
        workaround.
        (w32_initialize): Remove cleartype_active initialization.
        (syms_of_w32term): Remove w32_enable_unicode_output initialization.

2008-07-28  Andreas Schwab  <schwab@suse.de>

	* lisp.h (init_weak_hash_tables, syms_of_font)
	(xd_read_queued_messages, syms_of_dbusbind): Declare.
	(remove_hash_entry): Don't declare.
	* eval.c (maybe_call_debugger): Make static and move before use.
	* gtkutil.c: Include <X11/Xft/Xft.h> if HAVE_XFT.
	* xdisp.c: Include "gtkutil.h" if USE_GTK.
	* xterm.h (x_set_frame_alpha): Declare.

2008-07-28  Jan Djärv  <jan.h.d@swipnet.se>

	* gtkutil.c (menu_nav_ended): Revert change from 2008-07-24.
	(create_menus): Connect selection-done to menu_nav_ended.

2008-07-27  Adrian Robert  <Adrian.B.Robert@gmail.com>

	* nsfns.m (x-create-frame): Add copy of parms argument to beginning.
	Set Vx_resource_name to a fallback.  Replace read of 'buffered'
	parameter with read of 'alpha' one.
	(Qns_frame_parameter): Remove.
	* nsselection.m (selection-coding-system)
	(next-selection-coding-system, Vselection_coding_system)
	(Vnext_selection_coding_system): Drop.

2008-07-27  Adrian Robert  <Adrian.B.Robert@gmail.com>

	* nsfns.m (do-applescript, do_applescript): Rename to
	ns-do-applescript, ns_do_applescript, and move within file.

2008-07-27  Dan Nicolaescu  <dann@ics.uci.edu>

	Remove support for Mac Carbon.
	* mactoolbox.c:
	* macterm.h:
	* macterm.c:
	* macselect.c:
	* macmenu.c:
	* macgui.h:
	* macfns.c:
	* mac.c: Remove file.
	* s/darwin.h:
	* m/intel386.h:
	* xfaces.c:
	* xdisp.c:
	* window.c:
	* tparam.c: